# ChangeLog for x11-terms/rxvt-unicode
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt-unicode/ChangeLog,v 1.220 2012/05/21 18:08:18 xarthisius Exp $

  21 May 2012; Kacper Kowalik <xarthisius@gentoo.org> rxvt-unicode-9.15.ebuild:
  Add missing inheritance of eutils.eclass

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> rxvt-unicode-9.15.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  31 Mar 2012; Jeroen Roovers <jer@gentoo.org>
  -files/rxvt-unicode-9.10-force-hints.patch, -rxvt-unicode-9.12-r1.ebuild,
  -rxvt-unicode-9.14.ebuild:
  Old.

  31 Mar 2012; Raúl Porcel <armin76@gentoo.org> rxvt-unicode-9.15.ebuild:
  alpha/ia64/sparc stable wrt #405303

  06 Mar 2012; Jeroen Roovers <jer@gentoo.org> -rxvt-unicode-9.10.ebuild:
  Old.

  27 Feb 2012; Jeroen Roovers <jer@gentoo.org> rxvt-unicode-9.15.ebuild:
  Stable for HPPA (bug #405303).

  26 Feb 2012; Jeff Horelick <jdhore@gentoo.org> rxvt-unicode-9.15.ebuild:
  marked x86 per bug 405303

  25 Feb 2012; Agostino Sarubbo <ago@gentoo.org> rxvt-unicode-9.15.ebuild:
  Stable for amd64, wrt bug #405303

  25 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> rxvt-unicode-9.15.ebuild:
  ppc/ppc64 stable wrt #405303

  25 Feb 2012; Jeroen Roovers <jer@gentoo.org> rxvt-unicode-9.10.ebuild:
  Drop PPC.

  20 Feb 2012; Jeroen Roovers <jer@gentoo.org> rxvt-unicode-9.15.ebuild:
  Replace USE=truetype with USE=xft and make x11-libs/libXft dependency
  optional upon USE=xft by Dmitry Dzhus (bug #363757).

  11 Feb 2012; nixnut <nixnut@gentoo.org> rxvt-unicode-9.12-r1.ebuild:
  ppc stable #395703

  06 Feb 2012; Justin Lecher <jlec@gentoo.org> rxvt-unicode-9.15.ebuild:
  Give the launcher the standard terminal icon

  30 Jan 2012; Jeroen Roovers <jer@gentoo.org> rxvt-unicode-9.10.ebuild,
  -rxvt-unicode-9.11.ebuild, -rxvt-unicode-9.12.ebuild:
  Old.

  30 Jan 2012; Jeroen Roovers <jer@gentoo.org> rxvt-unicode-9.15.ebuild: