@@ -1,6 +1,13 @@
 # ChangeLog for x11-terms/rxvt-unicode
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt-unicode/ChangeLog,v 1.220 2012/05/21 18:08:18 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/rxvt-unicode/ChangeLog,v 1.221 2012/06/18 02:42:57 jer Exp $
+
+*rxvt-unicode-9.15-r1 (18 Jun 2012)
+
+  18 Jun 2012; Jeroen Roovers <jer@gentoo.org> +rxvt-unicode-9.15-r1.ebuild,
+  metadata.xml:
+  Add System category to desktop file by Jekyll Wu (bug #421515). Remove unused
+  USE flag description.
 
   21 May 2012; Kacper Kowalik <xarthisius@gentoo.org> rxvt-unicode-9.15.ebuild:
   Add missing inheritance of eutils.eclass
